--- a/pom.xml
+++ b/pom.xml
@@ -313,6 +313,11 @@
 			<artifactId>vaadin-server</artifactId>
 			<version>7.7.14</version>
 		</dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-catalina</artifactId>
+            <version>9.0.26</version>
+        </dependency>
 	</dependencies>
 
 	<profiles>
